--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
 
 header div {
     padding: 20px;
-    background-color: #1e88e6;
+    background-color: #009688;
 }
 
 /* POP-UPS, BUTTONS */
